version 0.4 (2007/10/27):

	- added support for method "abandon"
	- full request is now passed to methods
	- compatibility with the changed behaviour of the 'use fields' 
	  pragma in Perl 5.9.x (thanks to Peter Karman)

version 0.3 (2005/12/22):

	- added t/02-pod.t and t/03-podcoverage.t
	- moved pm to lib/
	- fixed POD error

version 0.2 (2005/11/28):

	- new